pdf_activity rotation , add to shelf from anywhere

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,4 +13,8 @@
         <item name="android:windowBackground">@drawable/splash_background</item>
     </style>
 
+    <style name="pdfBar" parent="Theme.AppCompat.DayNight.DarkActionBar">
+
+    </style>
+
 </resources>
